--- a/css/styles.css
+++ b/css/styles.css
@@ -102,19 +102,19 @@ p {
   color: #2e2f42;
 }
 
-.header-item-studio {
+.current {
   color: #404bbf;
 }
 
-.header-item-studio::after {
-  display: inline-block;
+.current::after {
   content: '';
   border-radius: 2px;
-  width: 48px;
+  width: 100%;
   height: 4px;
   background-color: #404bbf;
   position: absolute;
-  bottom: 0;
+  left: 0;
+  bottom: -1px;
 }
 
 .header-list-item-link {
@@ -125,6 +125,8 @@ p {
   display: block;
   display: flex;
   flex-direction: column;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .address {
@@ -134,6 +136,8 @@ p {
 .address-item-link {
   font-weight: 400;
   color: #434455;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link:hover,
@@ -152,7 +156,6 @@ p {
     ),
     url(../images/people-office-hero.jpg);
   background-repeat: no-repeat;
-  background-position: top left;
   background-size: cover;
 }
 
@@ -174,18 +177,22 @@ p {
   line-height: 1.5;
   letter-spacing: 0.04em;
   color: #fff;
-  background: #4d5ae5;
+  background-color: #4d5ae5;
   border: none;
   border-radius: 4px;
   min-width: 169px;
   height: 56px;
   display: block;
   margin: 0 auto;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
 }
 
 .button:hover,
 .button:focus {
-  background: #404bbf;
+  background-color: #404bbf;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
 }
 /* #endregion Hero */
 
@@ -262,6 +269,9 @@ p {
   background-color: #ffffff;
   border-radius: 0 0 4px 4px;
   width: calc((100% - 72px) - 4);
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+  background: #fff;
 }
 
 .team-item-content {
@@ -288,10 +298,27 @@ p {
   justify-content: center;
   align-items: center;
   gap: 24px;
+}
+
+.team-social-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 24px;
   width: 40px;
   height: 40px;
   border-radius: 50% 50%;
   background-color: #4d5ae5;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.team-social-link:hover {
+  background-color: #404bbf;
+}
+
+.social-icon {
+  fill: #f4f4fd;
 }
 /* #endregion Section Our team */
 
@@ -312,11 +339,46 @@ p {
   width: calc((100% - 48px) / 3);
 }
 
+.portfolio-list-item:hover {
+  cursor: pointer;
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+}
+
+.portfolio-list-item:hover .overlay-text {
+  opacity: 1;
+  transform: translateY(0);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .portfolio-item-content {
   padding: 32px 16px;
   padding-left: 16px;
   border: 1px solid #e7e9fc;
   border-top: none;
+}
+
+.portfolio-overlay {
+  position: relative;
+}
+
+.overlay-text {
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+  background-color: #4d5ae5;
+  padding-top: 40px;
+  padding-left: 32px;
+  padding-right: 32px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  transform: translateY(100%);
+  opacity: 0;
 }
 
 /* #endregion Section Portfolio */
@@ -325,6 +387,11 @@ p {
 .footer {
   background-color: #2e2f42;
   padding: 100px 0;
+}
+
+.footer-container {
+  display: flex;
+  gap: 120px;
 }
 
 .logo-footer {
@@ -340,5 +407,43 @@ p {
 .text-footer {
   color: #f4f4fd;
   width: 264px;
+}
+
+.footer-social-title {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #fff;
+  margin-bottom: 16px;
+}
+
+.footer-social-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+}
+
+.social-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50% 50%;
+  background-color: #4d5ae5;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-social-icon {
+  width: 24px;
+  height: 24px;
+  fill: #f4f4fd;
+}
+
+.social-link:hover {
+  background-color: #31d0aa;
 }
 /* #endregion Footer */
