--- a/css/styles.css
+++ b/css/styles.css
@@ -57,6 +57,8 @@ p {
 
 .header {
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .header-container {
@@ -125,8 +127,7 @@ p {
   display: block;
   display: flex;
   flex-direction: column;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .address {
@@ -136,8 +137,7 @@ p {
 .address-item-link {
   font-weight: 400;
   color: #434455;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link:hover,
@@ -148,6 +148,7 @@ p {
 
 /* #region Hero */
 .section-hero {
+  max-width: 1440px;
   background: #2e2f42;
   padding: 188px 0;
   background-image: linear-gradient(
@@ -157,6 +158,7 @@ p {
     url(../images/people-office-hero.jpg);
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
 }
 
 .hero-title {
@@ -184,8 +186,7 @@ p {
   height: 56px;
   display: block;
   margin: 0 auto;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
 }
 
@@ -300,20 +301,26 @@ p {
   gap: 24px;
 }
 
+.team-social-item {
+  width: 40px;
+  height: 40px;
+}
+
 .team-social-link {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 24px;
-  width: 40px;
-  height: 40px;
-  border-radius: 50% 50%;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
   background-color: #4d5ae5;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.team-social-link:hover {
+.team-social-link:hover,
+.team-social-link:focus {
   background-color: #404bbf;
 }
 
@@ -337,6 +344,7 @@ p {
 
 .portfolio-list-item {
   width: calc((100% - 48px) / 3);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-list-item:hover {
@@ -348,8 +356,8 @@ p {
 .portfolio-list-item:hover .overlay-text {
   opacity: 1;
   transform: translateY(0);
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  /* transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
 .portfolio-item-content {
@@ -361,6 +369,7 @@ p {
 
 .portfolio-overlay {
   position: relative;
+  overflow: hidden;
 }
 
 .overlay-text {
@@ -368,17 +377,15 @@ p {
   letter-spacing: 0.02em;
   color: #f4f4fd;
   background-color: #4d5ae5;
-  padding-top: 40px;
-  padding-left: 32px;
-  padding-right: 32px;
+  padding: 40px 32px;
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  overflow: auto;
   transform: translateY(100%);
   opacity: 0;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* #endregion Section Portfolio */
@@ -391,7 +398,11 @@ p {
 
 .footer-container {
   display: flex;
-  gap: 120px;
+  align-items: baseline;
+}
+
+.footer-content-wrap {
+  margin-right: 120px;
 }
 
 .logo-footer {
@@ -425,25 +436,23 @@ p {
   gap: 16px;
 }
 
-.social-link {
+.footer-social-item {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 40px;
   height: 40px;
-  border-radius: 50% 50%;
+  border-radius: 50%;
   background-color: #4d5ae5;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-social-icon {
-  width: 24px;
-  height: 24px;
   fill: #f4f4fd;
 }
 
-.social-link:hover {
+.footer-social-item:hover,
+.footer-social-item:focus {
   background-color: #31d0aa;
 }
 /* #endregion Footer */
