--- a/css/styles.css
+++ b/css/styles.css
@@ -289,11 +289,6 @@ p {
   margin-bottom: 8px;
 }
 
-.team-social-icon-wrap {
-  margin: 0 auto;
-  padding: 0 16px;
-}
-
 .team-social-icon-list {
   display: flex;
   justify-content: center;
@@ -310,7 +305,6 @@ p {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 24px;
   width: 100%;
   height: 100%;
   border-radius: 50%;
@@ -356,8 +350,6 @@ p {
 .portfolio-list-item:hover .overlay-text {
   opacity: 1;
   transform: translateY(0);
-  /* transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
 .portfolio-item-content {
@@ -443,7 +435,6 @@ p {
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  background-color: #4d5ae5;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -451,8 +442,18 @@ p {
   fill: #f4f4fd;
 }
 
-.footer-social-item:hover,
-.footer-social-item:focus {
+.social-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+}
+
+.social-link:hover,
+.social-link:focus {
   background-color: #31d0aa;
 }
 /* #endregion Footer */
