--- a/css/styles.css
+++ b/css/styles.css
@@ -309,8 +309,7 @@ p {
   height: 100%;
   border-radius: 50%;
   background-color: #4d5ae5;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team-social-link:hover,
@@ -435,6 +434,7 @@ p {
   width: 40px;
   height: 40px;
   border-radius: 50%;
+  background-color: #4d5ae5;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
